Add quick start page

--- a/.github/workflows/spellcheck.yml
+++ b/.github/workflows/spellcheck.yml
@@ -1,18 +1,13 @@
-name: Spelling Erros Check
+name: Spelling Errors Check
 
 on: [push]
 
 jobs:
   build:
-    strategy:
-      max-parallel: 2
-      matrix:
-        os: [ubuntu-latest]
-      
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Install dependencies
       run: curl -L https://git.io/misspell | bash
 
